# D-sight

./: .gitignore  README.md  dev.sh  docker-compose.dev.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5cc1d652864f_skills.py  a1b2c3d4e5f6_fund_arb_ref_est.py  a5bf00344509_threads.py  b1c2d3e4f5a6_threads_type.py  c7d8e9f0a1b2_social.py  d8e9f0a1b2c3_wechat_article_title_text.py  da5a0934405d_auth_tables.py  e01f2c79ec7c_kb.py  e30485f629c0_fund_arb.py  fa2380eddbbb_news.py  fd041ef34723_credits.py
backend/app/: main.py
backend/app/admin/: deps.py  router.py  schemas.py
backend/app/agent/: __init__.py  build.py  fake_llm.py  workspace.py
backend/app/auth/: deps.py  emailer.py  models.py  router.py  schemas.py  service.py
backend/app/chat/: history.py  router.py  schemas.py
backend/app/core/: config.py  db.py  ratelimit.py  scheduler.py  security.py
backend/app/credits/: models.py  pricing.py  reset.py  router.py  service.py
backend/app/fund_arb/: bootstrap.py  calibration.py  fetchers.py  job.py  models.py  router.py  schemas.py  seed.py  snapshot.py  valuation.py
backend/app/kb/: chunking.py  ingest.py  models.py  providers.py  retrieval.py  router.py  schemas.py
backend/app/news/: ingest.py  job.py  models.py  router.py  schemas.py  sources.py
backend/app/skills/: materialize.py  models.py  router.py  schemas.py  seed.py  usage.py
backend/app/social/: credentials.py  crypto.py  ingest.py  job.py  models.py  router.py  schemas.py
backend/app/threads/: models.py  router.py  schemas.py
backend/scripts/: admin.py  calibrate_ref.py  convert_arbtest_lof.py  import_skills.py  seed_news.py  seed_skills.py
backend/skills_data/tools/: report_audit.py
backend/tests/: conftest.py  test_admin_api.py  test_agent_build.py  test_agent_tools.py  test_auth_api.py  test_auth_service.py  test_chat_api.py  test_chat_credits.py  test_chat_history.py  test_credits_api.py  test_credits_flow.py  test_credits_models.py  test_credits_reset.py  test_credits_service.py  test_db.py  test_emailer.py  test_fund_arb_agent_tool.py  test_fund_arb_api.py  test_fund_arb_bootstrap.py  test_fund_arb_calibration.py  test_fund_arb_fetchers.py  test_fund_arb_jobs.py  test_fund_arb_models.py  test_fund_arb_seed.py  test_fund_arb_snapshot.py  test_fund_arb_valuation.py  test_health.py  test_import_skills.py  test_kb_api.py  test_kb_chunking.py  test_kb_flow.py  test_kb_ingest.py  test_kb_models.py  test_kb_providers.py  test_kb_retrieval.py  test_kb_sharing.py  test_news_api.py  test_news_flow.py  test_news_ingest.py  test_news_job.py  (+25 more)
poc/: .env.example  .gitignore  pyproject.toml
poc/eval/: questions.md  results-2026-07-06.md
poc/src/poc/: __init__.py  agent.py  convert_skills.py  run.py
poc/src/poc/tools/: web.py  (+2 more)
poc/tests/: test_agent.py  test_convert_skills.py  test_tools.py
(+96 files in other folders)
