[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "weixi1", email = "weixi1@stuff.weibo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "deepagents>=0.6.12",
    "httpx>=0.28.1",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "trafilatura>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]
